# Cyborg-Summer-Induction-2026

./: .gitignore
Task1/Task1A/: main.py  script.py
Task1/Task1A/Task1A-a/: script.py
Task1/Task1A/Task1A-b/: script.py
Task2/Task2a/: main.py  script2a.py
Task2/Task2b/: main.py  script2b.py
Task3/src/task3/: CMakeLists.txt  package.xml
Task3/src/task3/launch/: Task3.launch.py
Task3/src/task3/scripts/: Task3A.py  Task3C.py  Task3D_client.py  Task3D_server.py
Task3/src/task3/srv/: PrimeFactors.srv
