<?xml version="1.0"?>
<package format="3">

  <name>task3</name>
  <version>0.0.0</version>

  <description>
    Cyborg Robotics Summer Task 3
  </description>

  <maintainer email="samarpan1645@gmail.com">
    Cyborg Robotics
  </maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Python -->
  <depend>rclpy</depend>

  <!-- Existing Dependencies -->
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>

  <!-- Service Generation -->
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>

